# persona

./: .gitignore  Makefile  README.md  pyproject.toml  sitecustomize.py
deprecated/: 01_run_batch_stt.sh  01_tts_with_tunnel.py  02_process_stt.py  03_merge.py  04_process_live_stream_split.py  batch_process_live_stream.py  batch_stt.py  batch_transcribe.sh  batch_tts.py  download_channel.py  final_conversation_analysis.py  final_extract_live_stream_conversations.py  fix_conversation_tags.py  identify_conversations.py  improve_tags.py  manual_extract.py  refine_conversations.py  tts.py  tts_batch_with_tunnel.py  tts_local.py  tts_processor.py
docs/: algo-plan.md  eval_admin_v1_task_list.md  persona_agent_harness_execution_board_v1.md  persona_agent_harness_p0_task_list_v1.md  persona_agent_harness_priority_v1.md  persona_data_export_spec_v1.md  persona_eval_suite_spec_v1.md  persona_human_eval_rubric_v1.md  task.sh
player/: fix_filenames.py  next.config.ts  package-lock.json  package.json  serve-public.sh  single_manifest_202603.json  sync_standalone.js
remotion-video/: .gitignore
scripts/: 01_download_audio.sh  02_split_audio.py  03_batch_transcribe.sh  03_split_transcribe_merge.py  04_merge_transcripts.py  05_extract_conversations.py  analyze_35.py  analyze_35_final.py  analyze_calls_37.py  analyze_calls_v2_37.py  analyze_calls_v3_37.py  analyze_calls_v4_37.py  analyze_dialogs.py  analyze_transcript.py  analyze_transcript_32.py  audio_feature_check_92.py  audio_speaker_check_53.py  (+55 more)
speech2text/: .gitignore  pyproject.toml
speech2text/speech2text/: transcribe.py
(+87 files in other folders)
