[project]
name = "youtube-channel-downloader"
version = "0.1.0"
description = "Robust YouTube channel video downloader"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "yt-dlp-ejs>=0.4.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
